// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button Tests snapshot 1`] = `
<styled.button
  variant="primary"
/>
`;

exports[`Test StyledButton Tests snapshot 1`] = `
.c0 {
  min-width: 12rem;
  padding: 1rem;
  text-align: center;
  text-transform: uppercase;
  border: 0;
  border-radius: 4px;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
  background: #FF1654;
  color: #FFF;
  cursor: pointer;
  -webkit-transition: background ease-in 0.5s;
  transition: background ease-in 0.5s;
}

.c0:hover {
  background: #e2003c;
  -webkit-transition: background ease-in 0.5s;
  transition: background ease-in 0.5s;
}

<button
  class="c0"
/>
`;

exports[`Test StyledButton Tests snapshot 2`] = `
.c0 {
  min-width: 12rem;
  padding: 1rem;
  text-align: center;
  text-transform: uppercase;
  border: 0;
  border-radius: 4px;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
  background: #DBDBDB;
  color: #595959;
}

<button
  class="c0"
  disabled=""
/>
`;

exports[`Test StyledButton Tests snapshot 3`] = `
.c0 {
  min-width: 12rem;
  padding: 1rem;
  text-align: center;
  text-transform: uppercase;
  border: 0;
  border-radius: 4px;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
  background: #FF1654;
  color: #FFF;
  cursor: pointer;
  -webkit-transition: background ease-in 0.5s;
  transition: background ease-in 0.5s;
}

.c0:hover {
  background: #e2003c;
  -webkit-transition: background ease-in 0.5s;
  transition: background ease-in 0.5s;
}

<button
  class="c0"
/>
`;
